--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # Connection Database
 
 spring.jpa.hibernate.ddl-auto = validate
-spring.datasource.url = jdbc:mysql://172.16.0.18:3306/test
+spring.datasource.url = jdbc:mysql://localhost:3306/spring_hiber
 spring.datasource.username = root
-spring.datasource.password = Nescafe18
+spring.datasource.password = KataAcademy
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 spring.jpa.show-sql = true
 
