--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Connection Database
 
-spring.jpa.hibernate.ddl-auto = validate
+spring.jpa.hibernate.ddl-auto = create
 spring.datasource.url = jdbc:mysql://localhost:3306/spring_hiber
 spring.datasource.username = root
 spring.datasource.password = KataAcademy
